# ghost-query

./: Cargo.toml
proxy-server/: README.md  package-lock.json  package.json
proxy-server/api/: index.js
src/: index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/src/: App.tsx  index.css
src/src/components/ui/: button.tsx  chat-input.tsx  model-selector.tsx
